--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,14 +78,14 @@
                 android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/splash_button"
                     android:drawableLeft="@drawable/ic_baseline_account_box_24"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:hint="Username"
+                    android:hint="Email"
                     android:paddingTop="30dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
