--- a/app/src/main/res/layout/activity_provider_register.xml
+++ b/app/src/main/res/layout/activity_provider_register.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ProviderRegister">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,10 +15,9 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/login_img"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"/>
-
+            android:layout_marginTop="30dp"
+            android:src="@drawable/login_img" />
 
 
         <LinearLayout
@@ -31,23 +29,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome to"
-                android:gravity="center"
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:textSize="20dp"
-                android:textColor="@color/black"/>
+                android:gravity="center"
+                android:text="Welcome to"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Feed the Need"
-                android:gravity="center"
-                android:layout_marginTop="50dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="50dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:textSize="20dp"
-                android:textColor="@color/green"/>
+                android:gravity="center"
+                android:text="Feed the Need"
+                android:textColor="@color/green"
+                android:textSize="20dp" />
 
 
         </LinearLayout>
@@ -72,24 +70,99 @@
                 android:id="@+id/text_input_layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_username"
+                    android:id="@+id/etName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/splash_button"
                     android:drawableLeft="@drawable/ic_baseline_account_box_24"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:hint="Username"
-                    android:paddingTop="30dp"
+                    android:hint="Name"
                     android:paddingLeft="20dp"
+                    android:paddingTop="30dp"
                     android:paddingRight="20dp"
-                    android:paddingBottom="20dp"/>
+                    android:paddingBottom="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_input_layout4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etFoodCompanyName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/splash_button"
+                    android:drawableLeft="@drawable/ic_baseline_account_box_24"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Food Store Name"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="30dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_input_layout5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/splash_button"
+                    android:drawableLeft="@drawable/ic_baseline_account_box_24"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Phone Number"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="30dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etGmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/splash_button"
+                    android:drawableLeft="@drawable/ic_baseline_account_box_24"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Gmail"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="30dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,7 +175,7 @@
                 android:layout_marginBottom="25dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_pass"
+                    android:id="@+id/etPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/splash_button"
@@ -110,8 +183,8 @@
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/poppins_medium"
                     android:hint="Password"
-                    android:paddingTop="30dp"
                     android:paddingLeft="20dp"
+                    android:paddingTop="30dp"
                     android:paddingRight="20dp"
                     android:paddingBottom="20dp" />
 
@@ -120,45 +193,45 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp">
+                android:orientation="horizontal">
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Select your Id Proof"
-                    android:padding="10dp"
-                    android:textSize="18dp"
-                    android:textColor="@color/green"
                     android:fontFamily="@font/poppins_medium"
-                    android:textStyle="bold"/>
+                    android:padding="10dp"
+                    android:text="Select your Id Proof"
+                    android:textColor="@color/green"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
 
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/baseline_add_24"
-                    android:backgroundTint="@color/green"/>
-
+                    android:backgroundTint="@color/green"
+                    android:src="@drawable/baseline_add_24" />
 
 
             </LinearLayout>
 
 
             <Button
+                android:id="@+id/btnSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="40dp"
+                android:backgroundTint="@color/green"
+                android:fontFamily="@font/poppins_semibold"
+                android:padding="15dp"
                 android:text="Sign Up"
                 android:textColor="@color/white"
-                android:padding="15dp"
-                android:layout_margin="40dp"
-                android:textSize="17dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:backgroundTint="@color/green"/>
+                android:textSize="17dp" />
 
         </LinearLayout>
 
@@ -170,35 +243,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
         android:layout_marginBottom="20dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have an account?"
             android:fontFamily="@font/poppins_semibold"
-            android:textAlignment="center"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            android:text="Already have an account?"
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:paddingLeft="5dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:textColor="@color/green"
-            android:textAlignment="center"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"/>
-
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center_horizontal"
+            android:paddingLeft="5dp"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textColor="@color/green" />
 
 
     </LinearLayout>
-
-
-
 
 
 </RelativeLayout>
